--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,14 +3,19 @@
           package="com.example.GeoFencingDemo"
           android:versionCode="1"
           android:versionName="0.0.1">
-    <uses-sdk android:minSdkVersion="18"/>
+    <uses-sdk android:minSdkVersion="15"/>
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
-        <activity android:name="HomeActivity"
-                  android:label="@string/app_name">
+        <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name="HomeActivity"
+                  android:label="@string/app_name">
+        </activity>
+        <activity android:name=".GeoFencingActivity"/>
+        <activity android:name=".FinalActivity"/>
+        <activity android:name=".WizardActivity"/>
     </application>
 </manifest>
