--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,7 +6,8 @@
     <uses-sdk android:minSdkVersion="15"/>
     <application android:label="@string/app_name" android:icon="@drawable/gio_fencing"
                  android:theme="@android:style/Theme.Holo.Light">
-        <activity android:name=".LoginActivity">
+        <activity android:name=".LoginActivity"
+                  android:noHistory="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
