--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,9 +3,15 @@
           package="com.example.GeoFencingDemo"
           android:versionCode="1"
           android:versionName="0.0.1">
-    <uses-sdk android:minSdkVersion="15"/>
+    <uses-sdk android:minSdkVersion="8"/>
     <application android:label="@string/app_name" android:icon="@drawable/gio_fencing"
                  android:theme="@android:style/Theme.Holo.Light">
+        <uses-permission android:name="android.permission.INTERNET"/>
+        <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+        <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+        <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+        <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
+        <uses-permission android:name="it.mappe.permission.MAPS_RECEIVE"/>
         <activity android:name=".LoginActivity"
                   android:noHistory="true">
             <intent-filter>
