--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,7 +4,11 @@
           android:versionCode="1"
           android:versionName="0.0.1">
 
-    <uses-permission android:name="com.example.androidmapsv2.permission.MAPS_RECEIVE"/>
+    <uses-feature
+            android:glEsVersion="0x00020000"
+            android:required="true"/>
+
+    <uses-permission android:name="com.ehc.permission.MAPS_RECEIVE"/>
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
@@ -12,11 +16,17 @@
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
     <uses-permission android:name="it.mappe.permission.MAPS_RECEIVE"/>
 
-    <uses-sdk android:minSdkVersion="8"/>
+    <permission
+            android:name="com.ehc.permission.MAPS_RECEIVE"
+            android:protectionLevel="signature"/>
+
+
+    <uses-sdk android:minSdkVersion="12"/>
 
     <application android:label="@string/app_name" android:icon="@drawable/gio_fencing"
                  android:theme="@android:style/Theme.Holo.Light">
-        <uses-library android:name="com.google.android.maps"/>
+        <uses-library android:name="com.google.android.maps"
+                      android:required="true"/>
         <activity android:name=".LoginActivity"
                   android:noHistory="true">
             <intent-filter>
@@ -24,12 +34,18 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name="HomeActivity"
+        <activity android:name="com.ehc.GeoFencingDemo.HomeActivity"
                   android:label="@string/app_name">
         </activity>
         <activity android:name=".GeoFencingActivity"/>
         <activity android:name=".FinalActivity"/>
         <activity android:name=".WizardActivity"/>
+
+
+        <meta-data
+                android:name="com.google.android.maps.v2.API_KEY"
+                android:value="AIzaSyBMSptBXI5-NTlDj8WTPCbeEdahwuoiexA"/>
+
     </application>
 </manifest>
 
