--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,23 @@
             <artifactId>maps</artifactId>
             <version>17_r3</version>
         </dependency>
+        <dependency>
+            <groupId>com.simpligility.android.sdk-deployer</groupId>
+            <artifactId>google-apis-17</artifactId>
+            <version>2.3.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.android.gms</groupId>
+            <artifactId>google-play-services</artifactId>
+            <version>4</version>
+
+        </dependency>
+        <dependency>
+            <groupId>com.android.support</groupId>
+            <artifactId>support-v4</artifactId>
+            <version>18.0.0</version>
+        </dependency>
+
     </dependencies>
 
 
