--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,6 +7,8 @@
     <uses-feature
             android:glEsVersion="0x00020000"
             android:required="true"/>
+    <uses-feature android:name="android.hardware.camera"/>
+    <uses-feature android:name="android.hardware.camera.front"/>
 
     <uses-permission android:name="com.ehc.permission.MAPS_RECEIVE"/>
     <uses-permission android:name="android.permission.INTERNET"/>
