--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -26,7 +26,8 @@
     <uses-sdk android:minSdkVersion="12"/>
     <uses-feature android:name="android.hardware.camera.autofocus"/>
     <user-feature android:name="android.hardware.camera"/>
-    <application android:label="@string/app_name" android:icon="@drawable/gio_fencing"
+    <application android:label="@string/app_name"
+                 android:icon="@drawable/gio_fencing"
                  android:theme="@android:style/Theme.Holo.Light">
         <uses-library android:name="com.google.android.maps"
                       android:required="true"/>
@@ -47,8 +48,6 @@
         <activity android:name=".SecondStep"
                   android:noHistory="true"/>
         <activity android:name=".ThirdStep"/>
-
-
         <meta-data
                 android:name="com.google.android.maps.v2.API_KEY"
                 android:value="AIzaSyBMSptBXI5-NTlDj8WTPCbeEdahwuoiexA"/>
