--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,7 +16,7 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
-    <uses-permission android:name="it.mappe.permission.MAPS_RECEIVE"/>
+    <!--<uses-permission android:name="it.mappe.permission.MAPS_RECEIVE"/>-->
     <uses-permission android:name="android.permission.CAMERA"/>
 
     <permission
@@ -26,11 +26,13 @@
     <uses-sdk android:minSdkVersion="12"/>
     <uses-feature android:name="android.hardware.camera.autofocus"/>
     <user-feature android:name="android.hardware.camera"/>
+
+
     <application android:label="@string/app_name"
                  android:icon="@drawable/gio_fencing"
                  android:theme="@android:style/Theme.Holo.Light">
-        <uses-library android:name="com.google.android.maps"
-                      android:required="true"/>
+        <uses-library android:name="com.google.android.maps"/>
+
         <activity android:name=".LoginActivity"
                   android:noHistory="true">
             <intent-filter>
