--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,26 +4,25 @@
           android:versionCode="1"
           android:versionName="0.0.1">
 
-    <uses-feature
-            android:glEsVersion="0x00020000"
-            android:required="true"/>
-    <uses-feature android:name="android.hardware.camera"/>
-    <uses-feature android:name="android.hardware.camera.front"/>
-
-    <uses-permission android:name="com.ehc.permission.MAPS_RECEIVE"/>
+    <uses-permission android:name="com.ehc.GeoFencingDemo.permission.MAPS_RECEIVE"/>
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
-    <!--<uses-permission android:name="it.mappe.permission.MAPS_RECEIVE"/>-->
     <uses-permission android:name="android.permission.CAMERA"/>
 
     <permission
-            android:name="com.ehc.permission.MAPS_RECEIVE"
+            android:name="com.ehc.GeoFencingDemo.permission.MAPS_RECEIVE"
             android:protectionLevel="signature"/>
 
     <uses-sdk android:minSdkVersion="12"/>
+
+    <uses-feature
+            android:glEsVersion="0x00020000"
+            android:required="true"/>
+    <uses-feature android:name="android.hardware.camera"/>
+    <uses-feature android:name="android.hardware.camera.front"/>
     <uses-feature android:name="android.hardware.camera.autofocus"/>
     <user-feature android:name="android.hardware.camera"/>
 
@@ -31,13 +30,17 @@
     <application android:label="@string/app_name"
                  android:icon="@drawable/gio_fencing"
                  android:theme="@android:style/Theme.Holo.Light">
-        <uses-library android:name="com.google.android.maps"/>
+
+        <meta-data
+                android:name="com.google.android.maps.v2.API_KEY"
+                android:value="AIzaSyBvbJbqW5NYM7XRzY6bOP1BTnZzn3sEGlQ"/>
+
 
         <activity android:name=".LoginActivity"
                   android:noHistory="true">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
+            <action android:name="android.intent.action.MAIN"/>
+            <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
         <activity android:name=".HomeActivity"
@@ -50,9 +53,15 @@
         <activity android:name=".SecondStep"
                   android:noHistory="true"/>
         <activity android:name=".ThirdStep"/>
-        <meta-data
-                android:name="com.google.android.maps.v2.API_KEY"
-                android:value="AIzaSyBMSptBXI5-NTlDj8WTPCbeEdahwuoiexA"/>
+        <!--<activity android:name=".MapDisplay">-->
+        <!--<intent-filter>-->
+        <!--<action android:name="android.intent.action.MAIN"/>-->
+        <!--<category android:name="android.intent.category.LAUNCHER"/>-->
+        <!--</intent-filter>-->
+
+        <!--</activity>-->
+
+        <uses-library android:name="com.google.android.maps"/>
 
     </application>
 </manifest>
