--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -46,7 +46,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".HomeActivity"
+        <activity android:name=".LocationActivity"
                   android:label="@string/app_name"
                   android:screenOrientation="portrait">
         </activity>
@@ -61,7 +61,7 @@
                   android:noHistory="true"/>
         <activity android:name=".ThirdStepActivity"
                   android:screenOrientation="portrait"/>
-        <activity android:name=".DashBoardActivity"
+        <activity android:name=".HomeActivity"
                   android:screenOrientation="portrait"/>
         <!--<activity android:name=".MapDisplay">-->
         <!--<intent-filter>-->
