Cleaned up Final & Result Activities

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -52,6 +52,7 @@
         </activity>
         <activity android:name=".GeoFencingActivity"/>
         <activity android:name=".FinalActivity"
+                  android:noHistory="true"
                   android:screenOrientation="portrait"/>
         <activity android:name=".FirstStepActivity"
                   android:screenOrientation="portrait"
@@ -63,13 +64,6 @@
                   android:screenOrientation="portrait"/>
         <activity android:name=".HomeActivity"
                   android:screenOrientation="portrait"/>
-        <!--<activity android:name=".MapDisplay">-->
-        <!--<intent-filter>-->
-        <!--<action android:name="android.intent.action.MAIN"/>-->
-        <!--<category android:name="android.intent.category.LAUNCHER"/>-->
-        <!--</intent-filter>-->
-
-        <!--</activity>-->
 
         <uses-library android:name="com.google.android.maps"/>
 
