--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -64,6 +64,7 @@
                   android:screenOrientation="portrait"/>
         <activity android:name=".HomeActivity"
                   android:screenOrientation="portrait"/>
+        <activity android:name=".LocationDetailsActivity"/>
 
         <uses-library android:name="com.google.android.maps"/>
 
