--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -69,6 +69,7 @@
 
         <uses-library android:name="com.google.android.maps"/>
 
+        <service android:name=".GeofencingService"/>
     </application>
 </manifest>
 
